Fix alignmnet and update count of the personal max badge

--- a/src/components/UserProfile/Badge.css
+++ b/src/components/UserProfile/Badge.css
@@ -56,7 +56,7 @@
   text-align: center;
   font: 11px Arial, sans-serif;
   position: absolute;
-  transform: translate(-50%, 75%);
+  transform: translate(-50%, 25%);
   top: 50%;
   left: 50%;
   z-index: 0;
